pil2-stark/lib/include/starks_lib.h

    // Save Proof
    // ========================================================================================
    void save_challenges(void *pChallenges, char* globalInfoFile, char *fileDir);
    void save_publics(unsigned long numPublicInputs, void *pPublicInputs, char *fileDir);
    void save_proof_values(unsigned long numProofValues, void *pProofValues, char *fileDir);
    // FRIProof
    // ========================================================================================
    void *fri_proof_new(void *pSetupCtx);
    void fri_proof_get_tree_root(void *pFriProof, void* root, uint64_t tree_index);
    void fri_proof_set_airgroupvalues(void *pFriProof, void *airgroupValues);
    void fri_proof_set_airvalues(void *pFriProof, void *airValues);
    void *fri_proof_get_zkinproof(uint64_t proof_id, void *pFriProof, void* pPublics, void* pChallenges, void *pStarkInfo, char* globalInfoFile, char *fileDir);
    void fri_proof_free_zkinproof(void *pZkinProof);
    void fri_proof_free(void *pFriProof);
    // SetupCtx
    // ========================================================================================
    void *get_hint_ids_by_name(void *p_expression_bin, char* hintName);
    // Stark Info
    // ========================================================================================
    void *stark_info_new(char* filename);
    uint64_t get_map_total_n(void *pStarkInfo);
    void stark_info_free(void *pStarkInfo);
    // Prover Helpers
    // ========================================================================================
    void *prover_helpers_new(void *pStarkInfo);
    void prover_helpers_free(void *pProverHelpers);
    // Const Pols
    // ========================================================================================
    void load_const_tree(void *pConstTree, char *treeFilename, uint64_t constTreeSize);
    void load_const_pols(void *pConstPols, char *constFilename, uint64_t constSize);
    uint64_t get_const_tree_size(void *pStarkInfo);
    uint64_t get_const_size(void *pStarkInfo);
    void calculate_const_tree(void *pStarkInfo, void *pConstPolsAddress, void *pConstTree, char *treeFilename);
    // Expressions Bin
    // ========================================================================================
    void *expressions_bin_new(char* filename, bool global);
    void expressions_bin_free(void *pExpressionsBin);
    // Hints
    // ========================================================================================
    void *get_hint_field(void *pSetupCtx, void* stepsParams, uint64_t hintId, char* hintFieldName, void* hintOptions);
    uint64_t mul_hint_fields(void *pSetupCtx, void* stepsParams, uint64_t hintId, char *hintFieldNameDest, char *hintFieldName1, char *hintFieldName2, void* hintOptions1, void *hintOptions2);
 
    void *acc_hint_field(void *pSetupCtx, void* stepsParams, uint64_t hintId, char *hintFieldNameDest, char *hintFieldNameAirgroupVal, char *hintFieldName, bool add);
    void *acc_mul_hint_fields(void *pSetupCtx, void* stepsParams, uint64_t hintId, char *hintFieldNameDest, char *hintFieldNameAirgroupVal, char *hintFieldName1, char *hintFieldName2,  void* hintOptions1, void *hintOptions2, bool add);
    uint64_t set_hint_field(void *pSetupCtx, void* stepsParams, void *values, uint64_t hintId, char* hintFieldName);
    // Starks
    // ========================================================================================
    void *starks_new(void *pSetupCtx, void *pConstTree);
    void starks_free(void *pStarks);
    void treesGL_get_root(void *pStarks, uint64_t index, void *root);
    void treesGL_set_root(void *pStarks, uint64_t index, void *pProof);
    void calculate_xdivxsub(void *pStarks, void* xiChallenge, void *xDivXSub);
    void *get_fri_pol(void *pStarkInfo, void *buffer);
    void calculate_fri_polynomial(void *pStarks, void* stepsParams);
    void calculate_quotient_polynomial(void *pStarks, void* stepsParams);
    void calculate_impols_expressions(void *pStarks, uint64_t step, void* stepsParams);
    void extend_and_merkelize_custom_commit(void *pStarks, uint64_t commitId, uint64_t step, void *buffer, void *pProof, void *pBuffHelper, char *treeFile);
    void load_custom_commit(void *pStarks, uint64_t commitId, uint64_t step, void *buffer, void *pProof, char *treeFile);